Fix a second partition IE CSS bug, .pagedetails content was pushing below the full page bleed and adding a white strip

--- a/client/src/partition/partition_subapp/PartitionSubApp.scss
+++ b/client/src/partition/partition_subapp/PartitionSubApp.scss
@@ -6,7 +6,7 @@ $partitionPopupColour: $secondaryColor;
 .partition-container {
   padding-top: 10px;
   padding-bottom: 110px;
-  margin-bottom: -50px; //counter-act .mrgn-bttm-xl on main
+  margin-bottom: -90px; //counter-act .mrgn-bttm-xl on main, get .pagedetails content over top the background colour
   background-color: $partitionBackgroundColour;
 
   & > .partition-diagram-outer-area {
